--- a/v0.20/backend/package.json
+++ b/v0.20/backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ai-platform-v0.19-backend",
-  "version": "0.19.0",
+  "name": "ai-platform-v0.20-backend",
+  "version": "0.20.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.19.2"
   }
 }
